0.9.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.sphere_transport.filament_analysis.FilamentAnalysis.rst.txt
polaris.tasks.ocean.sphere\_transport.filament\_analysis.FilamentAnalysis
=========================================================================

.. currentmodule:: polaris.tasks.ocean.sphere_transport.filament_analysis

.. autoclass:: FilamentAnalysis

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~FilamentAnalysis.__init__
      ~FilamentAnalysis.add_dependency
      ~FilamentAnalysis.add_input_file
      ~FilamentAnalysis.add_output_file
      ~FilamentAnalysis.constrain_resources
      ~FilamentAnalysis.process_inputs_and_outputs
      ~FilamentAnalysis.run
      ~FilamentAnalysis.runtime_setup
      ~FilamentAnalysis.set_resources
      ~FilamentAnalysis.set_shared_config
      ~FilamentAnalysis.setup
      ~FilamentAnalysis.validate_baselines
   
   

   
   
   