1.0.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.sphere_transport.filament_analysis.FilamentAnalysis.rst.txt
polaris.tasks.ocean.sphere\_transport.filament\_analysis.FilamentAnalysis
=========================================================================

.. currentmodule:: polaris.tasks.ocean.sphere_transport.filament_analysis

.. autoclass:: FilamentAnalysis

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~FilamentAnalysis.__init__
      ~FilamentAnalysis.add_dependency
      ~FilamentAnalysis.add_horiz_mesh_input_file
      ~FilamentAnalysis.add_init_input_file
      ~FilamentAnalysis.add_input_file
      ~FilamentAnalysis.add_output_file
      ~FilamentAnalysis.add_output_files_for_ocean_model_input
      ~FilamentAnalysis.add_vert_coord_input_file
      ~FilamentAnalysis.check_properties
      ~FilamentAnalysis.constrain_resources
      ~FilamentAnalysis.get_horiz_mesh_filename
      ~FilamentAnalysis.get_init_filename
      ~FilamentAnalysis.get_vert_coord_filename
      ~FilamentAnalysis.map_from_native_model_vars
      ~FilamentAnalysis.map_to_native_model_vars
      ~FilamentAnalysis.open_model_dataset
      ~FilamentAnalysis.open_vert_coord_dataset
      ~FilamentAnalysis.process_inputs_and_outputs
      ~FilamentAnalysis.run
      ~FilamentAnalysis.runtime_setup
      ~FilamentAnalysis.set_resources
      ~FilamentAnalysis.set_shared_config
      ~FilamentAnalysis.setup
      ~FilamentAnalysis.validate_baselines
      ~FilamentAnalysis.write_horiz_mesh_dataset
      ~FilamentAnalysis.write_initial_state_dataset
      ~FilamentAnalysis.write_model_dataset
      ~FilamentAnalysis.write_vert_coord_dataset
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~FilamentAnalysis.component
      ~FilamentAnalysis.config
      ~FilamentAnalysis.input_data
   
   